fixed header alignment

--- a/design/bootstrap/less/base.less
+++ b/design/bootstrap/less/base.less
@@ -136,7 +136,6 @@ label.required:after {
 .main-content .news-entry {
   padding-bottom: 3em;
   margin-bottom: 1em;
-  // border-bottom: 1px dotted darken(@brand-primary, 13%);
 }
 
 .main-content .news-entry > .news-entry-details {
@@ -158,7 +157,7 @@ label.required:after {
 }
 
 .page-header {
-  // border-bottom: 1px dotted darken(@brand-primary, 13%);
+  text-align: left;
 }
 
 .sidebar {
